# FastAPI

FastAPIProject/: FastAPI_ORM实践指南.md  FastAPI数据校验详解.md  FastAPI统一响应模型与异常处理最佳实践.md  FastAPI综合实战指南.md  Python_Web框架选型分析.md  main.py  pyproject.toml  test_main.http
FastAPIProject/common/: __init__.py  exception_handlers.py  exceptions.py  response.py  status_codes.py
FastAPIProject/core/: __init__.py  exception_handlers.py  exceptions.py  responses.py  status_codes.py
FastAPIProject/db/: db_config.py
FastAPIProject/models/: __init__.py  book.py  todo.py
FastAPIProject/router/: __init__.py  books.py  todos.py
FastAPIProject/service/: __init__.py  books.py  todos.py
FastAPIProject/services/: __init__.py  todos.py
FastAPIProject/tests/: test_orm.py
FastAPIProject/简易计算器/: CalculatorRouter.py
