[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "pytest-asyncio>=1.3.0",
    "router>=0.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
